# unit-testing-01-gtest

./: .gitignore  CMakeLists.txt  ISalary.cpp  ISalary.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  main.cpp
src/: Administrative.h  ISalary.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.h  main.cpp
tst/: AdministrativeTest.cpp  CMakeLists.txt  ProfessorTest.cpp  main.cpp
